--- a/wp-content/themes/simple/assets/css/style.css
+++ b/wp-content/themes/simple/assets/css/style.css
@@ -61,7 +61,7 @@ section {
 }
 .article {
 	flex:2;
-	padding-right: 7px;
+	padding-right: 30px;
 }
 .side_bar {
 	flex: 1;
@@ -82,7 +82,7 @@ ul {
 	margin-bottom: 12px;
 }
 .side_bar a {
-	color:black;
+	color:#504a4a;
 	text-decoration: none;
 }
 .container a {
@@ -91,11 +91,16 @@ ul {
 .side_bar a:hover {
 	color:purple;
 }
+.widget_title {
+	color: purple;
+	font-size: 39px;
+}
 .widget_title a {
 	color:purple;
-	font-size: 28px;
+	font-size: 39px;
 }
 .widget_utimos_posts {
+	font-size: 23px;
 	font-weight: bold;
 	margin-bottom: 20px;
 }
@@ -107,6 +112,7 @@ ul {
 .article_text {
 	font-size:15px;
 	color:#8a888a;
+	margin-bottom: 50px;
 }
 .article_text a {
 	font-size: 12px;
@@ -117,6 +123,7 @@ ul {
 }
 .comments_number {
 	color:#353535;
+	margin-bottom: 33px;
 }
 .container_pagination {
 	display: flex;
@@ -134,6 +141,42 @@ ul {
 	font-size: 17px;
 }
 
+.comment {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 40px;
+}
+.author_photo {
+	font-size: 18px;
+	flex: 1;
+}
+.comment_area {
+	flex: 8;
+}
+.comment_area strong {
+	flex: 2;
+	color: blueviolet;
+}
+.comment_date {
+	margin-top: 3px;
+	color: #9a9999;
+	font-size: 13px;
+}
+.comment_text {
+	font-size: 15px;
+    color: #212323;
+}
+.comment_form {  
+    width: 400px;
+    height: 200px
+}
+.comment-respond {
+	margin-bottom: 100px;
+}
+.separator {
+	background-color: black;
+	height: 5px;
+}
 
 /*--------------------Footer------------------*/
 footer {
