--- a/wp-content/themes/simple/assets/css/style.css
+++ b/wp-content/themes/simple/assets/css/style.css
@@ -104,6 +104,18 @@ ul {
 	font-weight: bold;
 	margin-bottom: 20px;
 }
+.form {
+	margin-bottom: 50px;
+}
+.input {
+	width: 200px;
+    height: 23px;
+    color:#525050;
+}
+.button {
+	height: 25px;
+}
+
 .article_date {
 	font-size: 13px;
 	margin-bottom: 10px;
